<resources>
    <string name="app_name">AllSet</string>
    <string name="message_not_find_activity">No se encontro o no se definio el activity a mostrar</string>
    <string name="images_coil_regular">Regular</string>
    <string name="images_coil_rounded">Rounded Corner</string>
    <string name="images_coil_circle">Circle</string>
    <string name="images_coil_gray_scale">Gray Scale</string>
    <string name="images_coil_blur">Blur</string>
    <string name="images_coil_multiple_transformation">Multiple Transformation</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="scan">Scan</string>
    <string name="generate">Generate</string>
    <string name="generate_information">Ingresa un mensaje para generar un QR:</string>
    <string name="share">Share</string>
    <string name="send_qr">Enviar QR</string>
    <string name="scan_cancel">Escaner cancelado</string>
    <string name="scan_success">Escaneado con Exito</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="check_title">Include images for backup</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open_settings_preferences">open settings preferences</string>

    <string name="tab_layout_home_fragment">Home Fragment</string>
    <string name="tab_layout_account_fragment">Account Fragment</string>
    <string name="tab_layout_settings_fragment">Settings Fragment</string>
    <string name="title_activity_change_icon_app">ChangeIconAppActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_to_b">Go to B</string>
    <string name="go_to_a">Go to A</string>
    <string name="bottom_sheet_dialog_text">Bottom Sheet Dialog</string>
    <string name="bottom_sheet_dialog_fragment_text">Bottom Sheet Dialog Fragment</string>
    <string name="bottom_sheet_cancelable">cancelable</string>
    <string name="bottom_sheet_touch_outside">cancel touch outside</string>
    <string name="bottom_sheet_dragable">dragable</string>
    <string name="bottom_sheet_expanded">Expanded</string>
    <string name="bottom_sheet_collapsed">Collapsed</string>
</resources>