<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="checkbox"
            app:title="@string/check_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Adavances">
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_entries_values"
            app:key="dark_mode"
            app:title="Dark Mode"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:summary="Click to open website"
            app:title="Website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.google.com" />
        </Preference>

        <Preference
            app:summary="Click to open new Activity"
            app:title="Open New Activity">

            <intent
                android:action="com.hacybeyker.allset.principal.MainActivity"

                />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>